fix: sccs propeties values divisible by 2

--- a/youtube-client-app/src/app/components/header/header.component.scss
+++ b/youtube-client-app/src/app/components/header/header.component.scss
@@ -15,7 +15,7 @@ $header-center-width: 570px;
     }
 
     &__center-top {
-        padding: 15px 0;
+        padding: 14px 0;
         width: 100%;
         height: 80px;
         display: flex;
