--- a/youtube-client-app/src/app/components/profile-settings/profile-settings.component.scss
+++ b/youtube-client-app/src/app/components/profile-settings/profile-settings.component.scss
@@ -9,7 +9,7 @@
 
 .profile__name {
     width: 102px;
-    height: 15px;
+    height: 16px;
     font-size: 12px;
     line-height: 14px;
     text-align: right;
