--- a/youtube-client-app/src/app/components/result/result-item/result-item.component.scss
+++ b/youtube-client-app/src/app/components/result/result-item/result-item.component.scss
@@ -1,20 +1,20 @@
 @import "../../../../styles.scss";
 
 .result-item {
-    padding: 20px 31px 15px;
-    width: 263px;
-    height: 327px;
+    padding: 20px 30px 14px;
+    width: 262px;
+    height: 326px;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 21px;
+    gap: 20px;
     background-color: $light-grey;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     &__logo {
-        width: 223px;
-        height: 123px;
+        width: 222px;
+        height: 122px;
     }
     
     &__statistics {
@@ -27,7 +27,7 @@
         align-self: flex-end;
         font-weight: 700;
         font-size: 20px;
-        line-height: 23px;
+        line-height: 24px;
         text-align: right;
     }
     
