--- a/youtube-client-app/src/app/components/result/result.component.scss
+++ b/youtube-client-app/src/app/components/result/result.component.scss
@@ -1,8 +1,8 @@
 :host {
-    padding: 29px;
+    padding: 30px;
     margin: 0 auto;
-    width: 905px;
+    width: 906px;
     display: flex;
     flex-wrap: wrap;
-    gap: 29px;
+    gap: 30px;
 }
